src/riot-rs-macros/tests/ui/task/missing_autostart_param_for_peripherals.stderr
error: custom attribute panicked
 --> tests/ui/task/missing_autostart_param_for_peripherals.rs:7:1
  |
7 | #[riot_rs::task(peripherals)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the task must be `autostart` to receive peripherals
